tests/neg/i22589c.check
-- Error: tests/neg/i22589c.scala:8:7 ----------------------------------------------------------------------------------
 8 |object A extends Base[A.P] { // error
   |^
   |Cannot infer the implementation of the deferred given instance given_TC_T in trait Base
   |since the result is self-recursive. An implementing given needs to be written explicitly.
 9 |  case class P()
10 |}
